@startuml mrp-lite

package "Talleres" {
  entity Taller{
    -String codigo
    -String nombre
  }
  entity TipoEquipo{
    -String nombre
  }
  entity Equipo{
    -String codigo
    -int capacidad
  }

  Equipo "*" <-right- "1" Taller
  TipoEquipo "1" <-right- "*" Equipo
}

package "Productos" {
  entity Producto{
    -String nombre
  }

  entity Tarea{
    -String nombre
    -int orden
    -int tiempo
  }

  Producto "1" -right-> "*" Tarea
}

package "Pedidos" {
  enum EstadoPedido<<Enumeration>>{
    -"Pendiente"
    -"Planificado"
    -"No planificable"
    -"Finalizado"
  }
  
  entity PedidoFabricacion{
    -Date fecha_pedido
    -Date fecha_entrega
    -int cantidad
    -EstadoPedido estado
  }
  
  entity Cliente{
    -String razonSocial
    -long cuit
  }

  Cliente "1" <-down- "*" PedidoFabricacion
}

package "Planificaciones"{
    
  entity OrdenTrabajo{
    -int numero
  }

  entity Planificacion{
    -Periodo periodo
  }

  entity ProcesoPlanificacion{
    -Time inicio
    -Time fin
  }

  class Periodo {
    -Time inicio
    -Time fin
    -int duracion
  }

  ProcesoPlanificacion "1" -down-> "*" Planificacion
  OrdenTrabajo "1" <-left-> "1" Planificacion
}

Producto "1" <-up- "*" PedidoFabricacion
Planificacion "*"<-->"1" Equipo
Tarea "*" --> "1" TipoEquipo
Tarea "1" <-right- "*" Planificacion
ProcesoPlanificacion "1" --> "*" PedidoFabricacion

@enduml
